# app_components

./: .bazeliskrc  .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  main.cpp
application/: BUILD  application.cpp  application.h  iapplication.h  iservice.h
components/: BUILD  async_event_dispatcher.cpp  async_event_dispatcher.h  boost_logger.cpp  boost_logger.h  cout_logger.cpp  cout_logger.h  event_dispatcher_test.cpp  ievent_dispatcher.h  ilogger.h  iservice.h  signal_handler.cpp  signal_handler.h  sync_event_dispatcher.cpp  sync_event_dispatcher.h
dependency/: BUILD  application.cpp  application.h  component_converter.cpp  component_converter.h  component_creator.cpp  component_creator.h  component_description.cpp  component_description.h  component_instance.h  component_provider.cpp  component_provider.h  component_registry.h  converter.h  creator.cpp  creator.h  description.cpp  description.h  iapplication.h  iservice.h  main.cpp  provider.h  registry.h
examples/: BUILD  printer_service.cpp
registry/: BUILD  converter.cpp  converter.h  converters.h  creation_method_precedence_test.cpp  creator.cpp  creator.h  creators.h  dependencies.cpp  dependencies.h  dependency_injection_test.cpp  description.cpp  description.h  detail.h  di_test.cpp  instance.h  instance_creation_test.cpp  instance_scope_test.cpp  lifetime.h  provider.cpp  provider.h  provider_base.cpp  provider_base.h  registry.h  registry_base.cpp  registry_base.h  tagged_type.h
util/: BUILD  debug_log.h  demangle.cpp  demangle.h  demangle_test.cpp  lockless_lifo_queue.h  (+6 more)
